aligned demo button to stay where it is. fixed super weird issue where the latest version would output twice when not running under Ruby 1.9.2. apparently it's a bug and this is a workaround

--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -84,6 +84,12 @@ section#feature_block {
   text-align: center;
 }
 
+#demo_button {
+  position: absolute;
+  bottom: 23px;
+  right: 65px;
+}
+
 #feature_block_content, #feature_block_content * {
   font-family: Georgia;
   font-style: italic;
